--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -100,7 +100,7 @@
     @apply absolute top-1/2 -translate-y-1/2 text-center font-bold w-screen text-7xl; 
   }
 
-  /* #smooth-content {
+  .grid_lines {
     overflow: visible;
     width: 100%;
     background-image: linear-gradient(
@@ -112,5 +112,5 @@
       linear-gradient(90deg, rgba(255, 255, 255, 0.06) 1px, transparent 1px);
     background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
     background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
-  } */
+  }
 }
