--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -113,4 +113,17 @@
     background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
     background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
   }
+  .grid_lines_dark {
+    overflow: visible;
+    width: 100%;
+    background-image: linear-gradient(
+        rgba(0, 0, 0, 0.07) 2px,
+        transparent 2px
+      ),
+      linear-gradient(90deg, rgba(0, 0, 0, 0.07) 2px, transparent 2px),
+      linear-gradient(rgba(0, 0, 0, 0.06) 1px, transparent 1px),
+      linear-gradient(90deg, rgba(0, 0, 0, 0.06) 1px, transparent 1px);
+    background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
+    background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
+  }
 }
