footer nav, menu anchors

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -89,6 +89,9 @@
   .main_title {
     @apply text-xl xs:text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold uppercase;
   }
+  .lets_discuss {
+    @apply fixed top-1/2 -translate-y-1/2 text-sm font-bold uppercase text-nowrap p-4;
+  }
 
   .zooming_img {
     @apply absolute top-1/2 left-1/2 -translate-1/2 w-full h-full bg-cover; 
