ci mobile: advantage section

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -90,7 +90,7 @@
     @apply text-xl xs:text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold uppercase;
   }
   .lets_discuss {
-    @apply fixed top-1/2 -translate-y-1/2 text-sm font-bold uppercase text-nowrap p-4;
+    @apply text-sm font-bold uppercase text-nowrap p-4;
   }
 
   .zooming_img {
@@ -100,7 +100,7 @@
     @apply relative w-1/2 h-full overflow-hidden bg-primary z-10; 
   }
   .gate h2 {
-    @apply absolute top-1/2 -translate-y-1/2 text-center font-bold w-screen text-4xl; 
+    @apply absolute top-1/2 -translate-y-1/2 text-center font-bold w-screen text-2xl sm:text-3xl md:text-4xl; 
   }
 
   .grid_lines {
